# sdkmanager

./: .gitignore  CMakeLists.txt  LICENSE
backend/: CMakeLists.txt  Main.qml  appcontroller.cpp  appcontroller.h  main.cpp  wslcontroller.cpp  wslcontroller.h  wslmanager.cpp  wslmanager.h
cmake/: nsis_install.cmake
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  quasar-variables.sass
frontend/src/components/: AppHeader.vue  DeviceConfig.vue  DeviceSelector.vue  HostConfig.vue  OSSelector.vue  OperationButtons.vue  Stepper.vue  USBSelector.vue
frontend/src/qwebchannel/: qwebchannel.js
frontend/src/router/: router.js
frontend/src/views/: ErrorPage.vue  HomePage.vue  SettingsPage.vue
src/: main.cc
src/OSFlashCore/: CMakeLists.txt  downloader.cpp  downloader.h
src/platform/win/: resource.h  winicon.rc.in
src/test/FileOperation/: CMakeLists.txt  FileOp.cpp
